cargo-features = ["codegen-backend"]

[package]
name = "ooclutter"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
dashmap = "6.1.0"
futures-util = { version = "0.3.31", features = ["sink"] }
ring = { version = "0.17.14", features = ["std"] }
serde = { version = "1.0.219", features = ["alloc", "derive"] }
serde_json = { version = "1.0.140", features = ["alloc"] }
tokio = { version = "1.44.2", features = ["io-util", "macros", "net", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.14", features = ["codec", "net"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[profile.dev]
debug = true
codegen-units = 1024
codegen-backend = "cranelift"
split-debuginfo = "unpacked"
# incremental = false

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
# incremental = false

[profile.size]
inherits = "release"
opt-level = "z"
incremental = false
