cargo-features = ["codegen-backend"]

[package]
name = "ooclutter"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
futures-util = "0.3.31"
log = "0.4.27"
ooclutter-lib = { path = "./ooclutter-lib" }
simple_logger = "5.0.0"
tokio = "1.44.2"
tokio-util = "0.7.14"

[profile.dev]
debug = true
codegen-units = 1024
codegen-backend = "cranelift"
split-debuginfo = "unpacked"
incremental = false

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
incremental = false

[profile.size]
inherits = "release"
opt-level = "z"
incremental = false
