[package]
name = "ooclutter-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
futures-util = { version = "0.3.31", features = ["sink"] }
log = "0.4.27"
ring = { version = "0.17.14", features = ["std"] }
serde = { version = "1.0.219", features = ["alloc", "derive"] }
serde_json = { version = "1.0.140", features = ["alloc"] }
simple_logger = "5.0.0"
tokio = { version = "1.44.2", features = ["io-util", "macros", "net", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.14", features = ["codec", "net"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }